--- a/packages/components/src/theme/theme-spectrum/theme-spectrum-overrides.css
+++ b/packages/components/src/theme/theme-spectrum/theme-spectrum-overrides.css
@@ -44,3 +44,24 @@ label[class^='spectrum-'] {
   /* Quiet shouldn't assume a bg color */
   --spectrum-alias-background-color-default: transparent;
 }
+
+button[class^='spectrum-Button'] {
+  /* make the icon closer to the text */
+  --spectrum-button-primary-text-gap: 6px;
+
+  /* center the text vertically, we have different font, it requires different centering */
+  padding-bottom: calc(var(--spectrum-global-dimension-size-50) - 1px);
+  padding-top: calc(var(--spectrum-global-dimension-size-50));
+
+  svg {
+    /* our icons are smaller, center them too */
+    padding-bottom: 2px;
+  }
+}
+
+span[class^='spectrum-Checkbox-label'],
+span[class^='spectrum-Radio-label'] {
+  /* I have no idea why these spectrum labels aren't centered, but this fixes it */
+  margin-top: 0;
+  align-self: center;
+}
